@@ -28,7 +28,7 @@ Output fields:
   count_C - number of samples with C
   count_G - number of samples with G
 
-Usage: id_marker_alleles.py indir outpath samples [options]
+Usage: id_marker_alleles.py indir outpath sample_to_group [options]
 """,
 	epilog="""""")
 	parser.add_argument('indir', type=str,
@@ -37,10 +37,17 @@ contains files: [snps_alt_allele.txt, snps_info.txt, snps_summary.txt
                  snps_depth.txt, snps_ref_freq.txt]""")
 	parser.add_argument('outpath', type=str,
 		help="""path to output file""")
-	parser.add_argument('samples', type=str,
-		help="""comma-separated list of sample ids present in INDIR
-ex: sample1,sample2,sample3""")
-
+	parser.add_argument('sample_to_group', type=str,
+		help="""tab delimited file with no header and two columns: sample_id and group_id
+sample_id denotes sample ids present in INDIR
+group_id denotes non-independent sample_ids (e.g. technical, biological replicates)
+marker alleles are chosen such that they occur once per independent sample_id (see below)
+example sample_to_group file:
+sample1 subject1
+sample2 subject1
+sample3 subject2
+sample4 subject2
+""")
 	presabs = parser.add_argument_group("Options for determining allele presence/absence")
 	presabs.add_argument('--min_freq', type=float, metavar='FLOAT', default=0.10,
 		help="""minimum frequency (proportion of reads) for determining the presence/absence
@@ -50,33 +57,35 @@ of a nucleotide at a genomic site (0.10)""")
 of a nucleotide at a genomic site (3)""")
 
 	sites = parser.add_argument_group("Options for selecting discriminative sites")
-	sites.add_argument('--max_samples', type=int, metavar='INT', default=1,
-		help="""discard alleles found in > MAX_SAMPLES (1)""")
+	sites.add_argument('--max_groups', type=int, metavar='INT', default=1,
+		help="""discard alleles found in > MAX_GROUPS (1)
+a value of one indicates that marker alleles only occur once per independent sample""")
 	sites.add_argument('--max_sites', type=int, metavar='INT',
 		help="""maximum number of genomic sites to process (use all)
 useful for quick tests""")
 	args = vars(parser.parse_args())
-	args['samples'] = args['samples'].rstrip(',').split(',')
+	args['samples'] = dict([_.rstrip().split() for _ in open(args['sample_to_group'])])
 	return args
 
 def allele_counts(site, samples, min_freq, min_reads):
 	""" compute the prevelance of the 4 nucleotides for site across samples """
-	total = 0 # number of samples with non-zero coverage for site
-	counts = {'A':0, 'T':0, 'C':0, 'G':0}
-	for sample_id in samples: # fetch site info for each sample
+	total = set([]) # number of samples with non-zero coverage for site
+	groups = {'A':set([]), 'T':set([]), 'C':set([]), 'G':set([])}
+	for sample_id, group_id in samples.items(): # fetch site info for each sample
 		depth = int(site.depth[sample_id])
 		if depth == 0: # skip samples with no reads
 			continue
 		ref_freq = float(site.ref_freq[sample_id]) # count reference allele
 		if ref_freq >= min_freq and round(ref_freq * depth) >= min_reads:
 			ref_allele = site.info['ref_allele']
-			counts[ref_allele] += 1
+			groups[ref_allele].add(group_id)
 		alt_freq = 1-ref_freq # count alternate allele
 		if alt_freq >= min_freq and round(alt_freq * depth) >= min_reads:
 			alt_allele = site.alt_allele[sample_id]
-			counts[alt_allele] += 1
-		total += 1 # keep track of number of samples with data
-	return counts, total
+			groups[alt_allele].add(group_id)
+		total.add(group_id) # keep track of number of samples with data
+	counts = dict([(allele, len(group)) for allele, group in groups.items()])
+	return counts, len(total)
 
 def init_paths(args):
 	""" fetch paths to input files """
@@ -93,9 +102,11 @@ def init_paths(args):
 def check_sample_ids(args, paths):
 	""" make sure that specified sample ids are present in input """
 	samples = [_.split()[0] for _ in open(paths['summary'])][1:]
-	for sample_id in args['samples']:
+	for sample_id in args['samples'].copy():
 		if sample_id not in samples:
-			sys.exit("Specified sample '%s' not present in indir" % sample_id)
+			del args['samples'][sample_id]
+	if len(args['samples']) == 0:
+		sys.exit("No samples remain")
 
 if __name__ == "__main__":
 
@@ -104,7 +115,7 @@ if __name__ == "__main__":
 	paths = init_paths(args) # dictionary of paths
 	
 	check_sample_ids(args, paths) # make sure that specified sample ids are present in input
-
+	
 	# open output file & write header
 	bases = ['A', 'T', 'C', 'G']
 	outfile = open(args['outpath'], 'w')
@@ -125,7 +136,7 @@ if __name__ == "__main__":
 		alleles.sort(key=itemgetter(1))
 		if len(alleles) != 2:
 			continue
-		elif alleles[0][1] > args['max_samples']:
+		elif alleles[0][1] > args['max_groups']:
 			continue
 
 		# write identified discriminative allele
